src/components/Guide/GuideStyles.scss
@import '../../styles/inc/include-media';

.guide {
  height: 100%;
  overflow-y: auto;
  width: 100%;
}

.guide__content {
  max-width: 900px;

  @include media('>large') {
    padding: 4rem 2rem;
  }

  blockquote {
    color: var(--color-purple);
    font-size: 4.4rem;
    line-height: 5.4rem;
    font-weight: 300;
    p {
      font-size: 4.4rem;
      line-height: 5.4rem;
      font-weight: 300;
    }
  }

  pre {
    background-color: var(--theme-code-color);
    font-size: 13px;
    padding: 1rem;
    code {
      background-color: var(--theme-code-color);
      padding: 3px;
    }
  }
  code {
    background-color: var(--theme-code-color);
    border-radius: var(--border-radius);
    color: var(--theme-header-color);
    font-size: 13px;
    padding: 3px;
  }

  table {
    border-collapse: collapse;
    margin: 2rem 0 3rem;
    width: 100%;
  }

  tr {
    border-top: thin solid var(--theme-border);
    border-bottom: thin solid var(--theme-border);
    border-right: thin solid var(--theme-border);
  }

  td, th {
    border-left: thin solid var(--theme-border);
    padding: .5rem;
  }

}

.guide__image {
  display: block;
  height: auto;
  max-width: 100%;

  &--align-right {
    float: right;
    width: 40%;
  }

  &--align-left {
    float: left;
    width: 40%;
  }

}

.guide__toc {
  display: none;
  flex: 0 0 30%;
  padding: 12rem 4rem 4rem;
  @include media('>medium') {
    display: block;
  }
}

.guide__toc-block {
  position: sticky;
  top: 35px;
}

.guide__toc-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.guide__toc-item {
  a { text-decoration: none; }
  &--h2 {
    a {
      color: var(--color-gray-50);
      font-weight: 500;
    }
  }
  &--h3 {
    a {
      color: var(--color-gray-40);
      padding-left: 1rem;
    }
  }
  &.active {
    a {
      color: var(--theme-header-color);
      font-weight: 700;
    }
  }
}

